# VIO-100

./: README.md
4seasons_bag_generate/: 4seasons_bag_generate.py  README.md
run_evaluate_all/: README.md  evaluate.py  run.py
vio_100_src/camera_models/: CMakeLists.txt
vio_100_src/camera_models/include/camodocal/camera_models/: Camera.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
vio_100_src/camera_models/include/camodocal/gpl/: EigenUtils.h
vio_100_src/camera_models/src/camera_models/: CameraFactory.cc
vio_100_src/vio_100/: CMakeLists.txt  package.xml
vio_100_src/vio_100/config/: visual_inertial_rviz_config.rviz
vio_100_src/vio_100/launch/: visual_inertial_rviz.launch
vio_100_src/vio_100/src/: 4seasons_convert2bag.cpp  main3.cpp
vio_100_src/vio_100/src/factor/: imu_factor.cpp  imu_factor.h  initial_factor.cpp  initial_factor.h  integration_base.cpp  integration_base.h  loss_function.cpp  loss_function.h  marginalization_factor.cpp  marginalization_factor.h  operation.h  sparse_matrix.h  visual_inerial_base.cpp  visual_inerial_base.h  visual_inerial_base_rhs.cpp  visual_inerial_base_trans.cpp  visual_inerial_factor.cpp  visual_inerial_factor.h
vio_100_src/vio_100/src/feature/: feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h
vio_100_src/vio_100/src/parameter/: parameters.cpp  parameters.h
vio_100_src/vio_100/src/solver/: cost_function.h  solver.cpp  solver.h  solver_residualblock.cpp  solver_residualblock.h
vio_100_src/vio_100/src/swf/: swf.cpp  swf.h  swf_core.cpp  swf_image.cpp  swf_imu.cpp
vio_100_src/vio_100/src/utility/: tic_toc.h  visualization.cpp  visualization.h
vision_opencv-noetic/cv_bridge/: CMakeLists.txt
vision_opencv-noetic/cv_bridge/src/: module.hpp
vision_opencv-noetic/image_geometry/: CMakeLists.txt
yaml/: 4seasons_cam0.yaml  4seasons_config.yaml  euroc_cam0.yaml  euroc_config.yaml  my_cam0.yaml  my_config.yaml  tum_config.yaml
